Company Name Updated

--- a/engage-dev2.properties
+++ b/engage-dev2.properties
@@ -1,4 +1,4 @@
-company.name=Verizon
+company.name=Verizon Data Service India Pvt Ltd.
 company.age=52
 company.employees=7564
 company.headquarters=California,USA
