--- a/dfm-dev2.properties
+++ b/dfm-dev2.properties
@@ -1,4 +1,4 @@
-company.name=Wipro
+company.name=Legato Health Technologies LLP.
 company.age=76
 company.employees=36564
 company.headquarters=Bangalore, India
